--- a/brevets/templates/calc.html
+++ b/brevets/templates/calc.html
@@ -124,7 +124,10 @@
               var open_time_field = control.find("input[name='open']");
               var close_time_field = control.find("input[name='close']");
 
-              $.getJSON(TIME_CALC_URL, {km: km}).done(
+              var brevet_dist = $("#brevet_dist_km").val();
+              var start_time = $("#begin_date").val();
+
+              $.getJSON(TIME_CALC_URL, {km: km, brevet_dist: brevet_dist, start_time: start_time}).done(
                 function(data) {
                    var times = data.result;
                    console.log("Got a response: ");
